[package]
name = "allsport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
clearscreen = "2.0.1"
recap = "0.1.2"
rust_socketio = "0.4.3"
serde = "1.0.192"
serde_json = "1.0.108"
serialport = "4.2.2"
